     -i / --iface options (vnstat and vnstati)
   - Add configuration option UseUTC for using UTC as timezone for database
     entries instead of following the system timezone configuration
   - --iflist uses user configured interface specific MaxBW values in the
     output when available instead of showing only the kernel provided
     information when detected
   - Image output uses LibGD filled arc bug workaround only for LibGD
     versions that are known to be broken
   - Image output example cgi (examples/vnstat.cgi) improvements
     - Automatically lists all monitored interfaces instead of requiring the
       list to be filled manually, server name in page title comes from
       hostname command
     - Provides links for most available images to more detailed or longer
       versions of each image
     - Allows direct interface specific page access with /interfacename suffix
       for the cgi if the used httpd supports PATH_INFO
     - Has page auto refresh configurable


2.7 / 16-May-2021

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter
     combinations (pull request by Severin Glöckner)
   - Columns in text hours graph output could get misaligned if the selected
     system locale used a UTF-8 sequence for the thousands separator instead
     of a single character
 - New
   - Add -5g / --fivegraph options to image output with sizing related
     parameters for the output of a 5 minute resolution bar graph
   - Add configuration option SummaryGraph and optional parameter for
     --hsummary and --vsummary for selecting which graph is shown next to
     the summary data in the horizontal and vertical summary image outputs
   - Add --large / --small options and configuration option LargeFonts for
     controlling the image output font size