@@ -107,6 +107,10 @@ SaveInterval 5
 # how often (in minutes) data is saved when all interface are offline
 OfflineSaveInterval 30
 
+# automatically start monitoring all interfaces not found in the database
+# (1 = enabled, 0 = disabled)
+AlwaysAddNewInterfaces 0
+
 # on which day should months change
 MonthRotate 1
 MonthRotateAffectsYears 0
