@@ -158,6 +158,15 @@ reset within the 32-bits. Set to -2 for using automatic detection based on
 available kernel datastructures.
 
 .TP
+.B AlwaysAddNewInterfaces
+Enable or disable automatic creation of new database entries for interfaces not
+currently in the database even if the database file already exists when the
+daemon is started. New database entries will also get created for new interfaces
+seen while the daemon is running. Pseudo interfaces lo, lo0 and sit0 are always
+excluded from getting added.
+1 = enabled, 0 = disabled.
+
+.TP
 .B BandwidthDetection
 Try to automatically detect
 .B MaxBandwidth
